tests/ui/errors/snapshots/parse_error_recovery_expr_inside.snap
---
source: tests/ui/errors/mod.rs
---
  [error] Syntax error
   ╭─[test.lis:3:12]
 2 │ fn test() {
 3 │   foo(1 + ^);
   ·            ┬
   ·            ╰── expected expression, found `)`
 4 │ }
   ╰────
  help: Check your syntax · code: [parse.expected_expression]
