tests/ui/errors/snapshots/parse_error_recovery_multi_arg.snap
---
source: tests/ui/errors/mod.rs
---
  ✕ Syntax error
   ╭─[test.lis:3:11]
 2 │ fn test() {
 3 │   foo(a, b@c, d);
   ·           ─┬
   ·            ╰── expected `,` or `)`
 4 │ }
   ╰────
  help: Add a comma between elements · code: [parse.syntax_error]
