tests/ui/errors/snapshots/parse_error_recovery_nested_call.snap
---
source: tests/ui/errors/mod.rs
---
  ✕ Syntax error
   ╭─[test.lis:3:17]
 2 │ fn test() {
 3 │   foo(bar(baz()^));
   ·                 ┬
   ·                 ╰── expected expression, found `)`
 4 │ }
   ╰────
  help: Check your syntax · code: [parse.expected_expression]
