tests/ui/errors/snapshots/parse_error_recovery_slice_pattern.snap
---
source: tests/ui/errors/mod.rs
---
  ✕ Syntax error
   ╭─[test.lis:3:9]
 2 │ fn test() {
 3 │   let [a^ b, c] = arr;
   ·         ┬
   ·         ╰── expected `,` or `]`
 4 │ }
   ╰────
  help: Add a comma between elements · code: [parse.syntax_error]
