tests/ui/errors/snapshots/parse_error_single_element_tuple.snap
---
source: tests/ui/errors/mod.rs
---
  ✕ Invalid tuple
   ╭─[test.lis:3:11]
 2 │ fn test() {
 3 │   let t = (1,);
   ·           ──┬─
   ·             ╰── 1-element tuple not allowed
 4 │ }
   ╰────
  help: Use the type directly without wrapping in a tuple · code: [parse.tuple_element_count]
