tests/ui/errors/snapshots/parse_error_single_element_tuple_type.snap
---
source: tests/ui/errors/mod.rs
---
  ✕ Invalid tuple
   ╭─[test.lis:2:11]
 1 │ 
 2 │ fn f() -> (int,) {}
   ·           ───┬──
   ·              ╰── 1-element tuple not allowed
   ╰────
  help: Use the type directly without wrapping in a tuple · code: [parse.tuple_element_count]
