tests/ui/errors/snapshots/parse_error_struct_unclosed_generic_at_eof.snap
---
source: tests/ui/errors/mod.rs
---
  ✕ Syntax error
   ╭─[test.lis:1:10]
 1 │ struct S<
   ╰────
  code: [parse.unexpected_token]
