tests/ui/errors/snapshots/parse_error_type_alias_unclosed_generic_at_eof.snap
---
source: tests/ui/errors/mod.rs
---
  ✕ Syntax error
   ╭─[test.lis:1:8]
 1 │ type T<
   ╰────
  code: [parse.unexpected_token]
